--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -1,27 +1,26 @@
 ---
 title: Kilpi
-description: Modern TypeScript authorization framework for safer and better code.
 template: splash
 hero:
-  tagline: Modern TypeScript authorization framework for safer and better code.
-  actions:
-    - text: Get started
-      link: /guides/getting-started/
-      icon: right-arrow
+  title: ""
+banner:
+  content: Unstable API until v1 released, use with caution
+prev: false
+next: false
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import "../../styles/landing-page.css";
 
-## Next steps
+import { BottomGetStartedSection } from "@/components/BottomGetStartedSection";
+import { FeaturesSection } from "@/components/FeaturesSection";
+import { HeroSection } from "@/components/HeroSection";
+import { IntegrationsSection } from "@/components/IntegrationsSection";
+import { IntroductionSection } from "@/components/IntroductionSection";
 
-<CardGrid stagger>
-	<Card title="Contribute" icon="github">
-		View Kilpi on Github
-	</Card>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+<main class="not-content text-foreground">
+	<HeroSection />
+	<IntroductionSection />
+	<FeaturesSection />
+	<IntegrationsSection />
+	<BottomGetStartedSection />
+</main>
