docs: ensure tailwind only loaded on landing page

--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -10,6 +10,7 @@ next: false
 ---
 
 import "../../styles/landing-page.css";
+import "../../styles/global.css";
 
 import { BottomGetStartedSection } from "@/components/BottomGetStartedSection";
 import { FeaturesSection } from "@/components/FeaturesSection";
