--- a/apps/docs/src/content/docs/getting-started/project-structure.mdx
+++ b/apps/docs/src/content/docs/getting-started/project-structure.mdx
@@ -18,6 +18,8 @@ The recommended project structure is to start with a `kilpi` directory in your p
 
 </FileTree>
 
+---
+
 ## Larger projects
 
 As your project grows, you may start extracing policies into their own files, e.g. with a `policies` directory or with a feature-based architecture.
@@ -43,6 +45,8 @@ export const Kilpi = createKilpi({
 
 ### `policies` directory
 
+If you'd like to keep your policies centralized, but separate them by domain, you can create a `policies` directory in your `kilpi` directory.
+
 <FileTree>
 
 - src
@@ -58,6 +62,8 @@ export const Kilpi = createKilpi({
 </FileTree>
 
 ### Feature-based architecture
+
+Alternatively, if you'd like to keep your policies defined close to where they are consumed, you can use the following **feature-based folder structure**.
 
 <FileTree>
 
@@ -77,5 +83,7 @@ export const Kilpi = createKilpi({
       - ...
       - documents.policies.ts
 
-
 </FileTree>
+
+> Using a feature-based folder structure is recommended for all applications, however even in a feature-based folder structure you may opt to use a `policies` directory to keep your policies centralized.
+
