--- a/apps/docs/src/content/docs/concepts/authorization.mdx
+++ b/apps/docs/src/content/docs/concepts/authorization.mdx
@@ -1,6 +1,30 @@
 ---
 title: Authorization
-description: Authorization
 ---
 
-No content.
+When a policy is evaluated, it returns an **authorization object**. An authorization can be `granted` or `denied`.
+
+If granted, the authorization object contains the narrowed down `subject`. If not, it contains a `message` explaining why the authorization was denied.
+
+Using authorization objects allows for more a more feature-rich authorization system instead of simply returning a `boolean`.
+
+```ts
+type AuthorizationGranted<T> = { granted: true; subject: T; };
+type AuthorizationDenied = { granted: false; message?: string };
+type Authorization<T> = AuthorizationGranted<T> | AuthorizationDenied;
+```
+
+## Receiving the authorization object
+
+To receive the authorization object, you can use the `Kilpi.getAuthorization` method.
+
+```ts
+const authorization = Kilpi.getAuthorization("example:policy", resource);
+
+if (!authorization.granted) {
+  console.error("Authorization denied:", authorization.message);
+  return;
+} 
+
+console.log("Authorization granted to", authorization.subject.name);
+```
