feat: new plugin API, remove adapter API, new react-server-component plugin, rename request context to scope, introduce subject caching

--- a/apps/docs/src/content/docs/concepts/context.mdx
+++ b/apps/docs/src/content/docs/concepts/context.mdx
@@ -1,5 +1,5 @@
 ---
-title: Context
+title: Request context
 ---
 
 **Context** or more specifically the **request context** is the way Kilpi handles **"global" values**. It is a **request-scoped mutable object**.
