docs: update landing page to reflect new features

--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -15,11 +15,11 @@ import "../../styles/global.css";
 import { BottomGetStartedSection } from "@/components/BottomGetStartedSection";
 import { FeaturesSection } from "@/components/FeaturesSection";
 import { HeroSection } from "@/components/HeroSection";
-import { IntegrationsSection } from "@/components/IntegrationsSection";
+import { PluginsSection } from "@/components/PluginsSection";
 
 <main class="not-content text-foreground">
 	<HeroSection />
 	<FeaturesSection />
-	<IntegrationsSection />
+	<PluginsSection />
 	<BottomGetStartedSection />
 </main>
