--- a/apps/docs/src/content/docs/concepts/scope.mdx
+++ b/apps/docs/src/content/docs/concepts/scope.mdx
@@ -1,5 +1,5 @@
 ---
-title: Request context
+title: Scope
 ---
 
 **Context** or more specifically the **request context** is the way Kilpi handles **"global" values**. It is a **request-scoped mutable object**.
