--- a/apps/docs/src/content/docs/plugins/react-server-components.mdx
+++ b/apps/docs/src/content/docs/plugins/react-server-components.mdx
@@ -1,7 +1,7 @@
 ---
-title: React Server Components
+title: React Server Components (RSC) Plugin
 sidebar:
-  label: React (RSC)  
+  label: React RSC Plugin 
   badge:
     text: Pending
 ---
