--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -17,7 +17,7 @@ import { FeaturesSection } from "@/components/FeaturesSection";
 import { HeroSection } from "@/components/HeroSection";
 import { PluginsSection } from "@/components/PluginsSection";
 
-<main class="not-content text-foreground">
+<main class="not-content text-foreground max-w-screen overflow-hidden">
 	<HeroSection />
 	<FeaturesSection />
 	<PluginsSection />
